resources/traefik-setup-manifest.yml
#! Taken from https://doc.traefik.io/traefik/getting-started/quick-start-with-kubernetes/
#! Creates RBAC permissions and Traefik containers 
#! 00-role.yml
---
#! 02-traefik-deployment.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.insecure
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080

#! From here on, it will be possible to create Traefik ingress on kubeguard service manifest
