resources/wireguard-deployment.yaml
---
#! Deployment definition for WireGuard for a single instance container.
#! Configuration data from a secret gets mounted as files into the container.
#! The init container ensures forwarding is enabled.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: kubeguard
  labels:
    app: kubeguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kubeguard
  template:
    metadata:
      labels:
        app: kubeguard
    spec:
      containers:
      - name: wireguard
        image: weejewel/wg-easy:latest
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
              SYS_MODULE 
        ports:
        - containerPort: 51820
          protocol: UDP
        - containerPort: 51821
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "728m"
          limits:
            cpu: "1024m"
            memory: "1024Mi"
        volumeMounts:
        - name: wireguard-config
          mountPath: /etc/wireguard/
          readOnly: true
        - name: lib-volume
          mountPath: /lib/modules/
      volumes: 
      - name: lib-volume
        hostPath:
          path: /lib/modules
      - name: wireguard-config
        persistentVolumeClaim:
          claimName: wireguard
