resources/cdr-kubeguard-ingress.yml
#! Sets up a pair of ingresses for 
#! https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/#kind-ingressroute
#! https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/

#! One IngressRoute is needed for HTTP services (web dashboards)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-console
  namespace: kubeguard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`adguard.mackeronis.net`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: adguard-service
      port: 3000
  - match: Host(`wireguard.mackeronis.net`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: adguard-service
      port: 3000
