resources/kubeguard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeguard-ingress
  namespace: kubeguard
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /adguard
        pathType: Prefix
        backend:
          service:
            name: adguard-service
            port:
              number: 3000
      - path: /wireguard
        pathType: Prefix
        backend:
          service:
            name: wireguard-service
            port:
              number: 51821

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: wireguard-ingress
#   namespace: kubeguard
#   annotations:
#     ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /wireguard
#         pathType: Prefix
#         backend:
#           service:
#             name: wireguard-service
#             port:
#               number: 51821
