resources/kubeguard-manifest.yml
---
#! Service definition for all Kubeguard Components, being: 
#! https://doc.traefik.io/traefik/getting-started/quick-start-with-kubernetes/
apiVersion: v1
kind: Service
metadata:
  name: kubeguard-service
  namespace: kubeguard
spec:
  type: LoadBalancer
  selector:
    app: kubeguard
  ports:
    - name: domain-name-service
      port: 53
      targetPort: 53
      protocol: UDP
    - name: adguard-console
      port: 3000
      targetPort: 3000
      protocol: TCP  

---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-service
  labels:
    app: wireguard
spec:
  ports:
  - name: wireguard
    targetPort: 51820
    port: 51820
    protocol: UDP
  - name: web
    targetPort: 51821 #change to 80 if there's any problem
    port: 51821 #change to 80 if there's any problem
  selector:
    app: wireguard

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wireguard-ui-route
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`vpn.example.com`)
    kind: Rule
    services:
    - name: wireguard-service
      port: 80
    middlewares:
    - name: authelia-middleware
      namespace: admin
  tls:
    certResolver: letsencrypt
